# majordomo

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DESIGN.md  DOCKER_INSTALL.md  DOCKER_SETUP.md  NFC_SETUP.md  QUEST_SYSTEM_NOTES.md  RAILWAY_DEPLOYMENT.md  claude.md  cloudflared-config.yml  core_vision.txt  design_decisions.md  docker-compose.yml  nfc_approch.txt  project_setup.txt  railway.toml  session_start.md
backend/: .dockerignore  Dockerfile  README.md  achievements.md  add_consumables.py  alembic.ini  claude.md  error_codes.md  main.py  pyproject.toml  requirements.txt  seed.py  seed_test_data.py
backend/app/: auth.py  database.py  errors.py  main.py
backend/app/crud/: __init__.py  achievement.py  daily_bounty.py  home.py  quest.py  quest_template.py  reward.py  subscription.py  user.py
backend/app/models/: __init__.py  achievement.py  daily_bounty.py  home.py  quest.py  reward.py  user.py
backend/app/routes/: achievement.py  auth.py  bounty.py  home.py  quest.py  reward.py  subscription.py  triggers.py  user.py
backend/app/services/: recurring_quests.py  scribe.py
backend/migrations/: env.py
backend/migrations/versions/: add_achievement_template_system.py  add_awarded_rewards_fields.py  add_email_to_user.py  (+7 more)
backend/tests/: conftest.py  test_achievements.py  test_auth.py  test_bounty.py  test_homes.py  test_integration_quest_first.py  test_quest_conversion.py  test_quest_corruption.py  test_quests.py  test_recurring_quests.py  test_rewards.py  test_scribe.py  test_subscriptions.py  test_triggers.py  test_users.py
(+104 files in other folders)
